--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="HKUST Smart Car Library : Sentinel is the best" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>HKUST Smart Car Library by HKUST</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>HKUST Smart Car Library</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/HKUST/USTSmartcar">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/HKUST/USTSmartcar/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/HKUST/USTSmartcar/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/HKUST/USTSmartcar">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">HKUST Smart Car Library</h1>
-          <h2 id="project_tagline">Sentinel is the best</h2>
+      <section>
+        <div id="title">
+          <h1>HKUST Smart Car Library</h1>
+          <p>Sentinel is the best</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/HKUST">HKUST</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/HKUST/USTSmartcar/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/HKUST/USTSmartcar/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h1>USTSmartcar</h1>
+
+<p><img src="http://i.imgur.com/yuj3QYG.png" alt="Team Logo"></p>
 
 <p>This is a library developed by the HKUST Robotics team for the SmartCar Competition. 
 Compiles in the IAR IDE for the Freescale k60 MCU on a custom made development board.</p>
+
+<p>First Started in 2012.</p>
 
 <p>Gyroscope, Accelerometer, encoders and Linear CCD libraries are also written for input.</p>
 
@@ -63,23 +74,16 @@ Compiles in the IAR IDE for the Freescale k60 MCU on a custom made development b
 <li>try to place them in their own .h &amp; .c files</li>
 </ul><h3>Authors and Contributors</h3>
 
-<p>Library built and maintained by <a href="https://github.com/jcching" class="user-mention">@jcching</a>, <a href="https://github.com/LouisMo" class="user-mention">@LouisMo</a>, <a href="https://github.com/city25" class="user-mention">@city25</a></p>
+<p>Library built and maintained by <a href="https://github.com/jcching" class="user-mention">@jcching</a>, <a href="https://github.com/LouisMo" class="user-mention">@LouisMo</a>, <a href="https://github.com/city25" class="user-mention">@city25</a>
+Magnetic branch maintained by <a href="https://github.com/fyuac" class="user-mention">@fyuac</a>, <a href="https://github.com/benjaminlair18" class="user-mention">@benjaminlair18</a></p>
 
 <h3>Support or Contact</h3>
 
 <p>Having trouble with this library? No support from us, but we tried commenting the code thoroughly</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">HKUST Smart Car Library maintained by <a href="https://github.com/HKUST">HKUST</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
